Make sure card margins don't collapse on small screens

--- a/src/scss/cs/cards.scss
+++ b/src/scss/cs/cards.scss
@@ -5,7 +5,8 @@
   border-radius: 15px;
 
   @media (max-width: map-get($breakpoints, md)) {
-    min-width: 100%;
+    min-width: 95%;
+    display: inline-block;
   }
 
   ::after {
